miscAssignment Page additions and fixes, Collapsed Menu changes

--- a/client/src/styles/new.css
+++ b/client/src/styles/new.css
@@ -105,3 +105,23 @@ label {
   padding: 0;
   text-align: center;
 }
+
+.navbar-brand{
+padding-left: 10px;
+}
+
+.signButton{
+  padding-right: 10px;
+}
+
+.signOutBtn{
+  all: initial;
+}
+
+.navbar-toggler{
+  margin-left: 10px
+}
+.btn-danger{
+  margin-left:auto;
+  margin-right: 0;
+}
